syntax = "proto3";
package realionetwork.bridge.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "realionetwork/bridge/v1/params.proto";
import "realionetwork/bridge/v1/ratelimit.proto";

option go_package = "github.com/realiotech/realio-network/x/bridge/types";

// GenesisState defines the bridge module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  // registered denoms and its rate limit
  repeated cosmos.base.v1beta1.Coin registered_coins = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // rate limit epoch info
  EpochInfo ratelimit_epoch_info = 3 [ (gogoproto.nullable) = false ];
}
